--- a/package.json
+++ b/package.json
@@ -17,12 +17,24 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "pretypeorm": "ts-node -r tsconfig-paths/register ./src/database/copy-typeorm-config.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "seeds": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-seeding/dist/cli.js",
+    "migration:generate": "npm run typeorm -- migration:generate src/database/migrations/$npm_config_name -p -d src/database/typeorm-config-cli.ts",
+    "migration:create": "cross-env npm run typeorm -- migration:create src/database/migrations/$npm_config_name",
+    "migration:run": "npm run typeorm -- migration:run -d src/database/typeorm-config-cli.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/database/typeorm-config-cli.ts"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "bcryptjs": "^2.4.3",
+    "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
