--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,11 @@
-PORT=5000
-NODE_ENV=development
-
-DATABASE_TYPE=postgres
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=starwars
-DATABASE_NAME=scheduleTask
-DATABASE_SYNCHRONIZE=false
-DATABASE_MAX_CONNECTIONS=100
-
+PORT=
+NODE_ENV=
+DATABASE_TYPE=
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+DATABASE_SYNCHRONIZE=
+DATABASE_MAX_CONNECTIONS=
 AUTH_TOKEN_SECRET=
